# NORAI-Tools

./: GenerateDatasetsAndTrainingPlan.md  README.md  modal_app.py  plan.md  pyproject.toml
norai_tools/: __init__.py  config.py  gspo_prep.py  improver.py  loader.py  prompts.py  rewards.py  validation.py
notebooks/: distill_qwen_norwegian.ipynb  gspo_train.ipynb  gspo_train_distilled.ipynb  improve_alpaca.ipynb  prepare_gspo_dataset.ipynb
tests/: conftest.py  test_config.py  test_gspo_prep.py  test_improver.py  test_loader.py  test_prompts.py  test_rewards.py  test_validation.py
